# tessera

./: .gitmodules  CMakeLists.txt  README.md  app.c  app.h  build.sh  dropdown.c  dropdown.h  gpu.c  gpu.h  manager.c  manager.h  patterns.c  patterns.h  reconstruction.c  reconstruction.h  sample.c  sample.h
.github/inactive_flows/: test.yml
.github/workflows/: cmake-single-platform.yml  cmake.yml  release.yml  test.yml
MacOS/: Icon.icns  Info.plist  start.sh
include/glad/: glad.h
src/: Info.plist  app.c  app.h  app_state.c
src/patterns/: glad.c  hadamard.frag  patterns.c  patterns.h  wavelet.frag
src/reconstruction/: reconstruction.c  reconstruction.h
src/sample/: sample.c  sample.h
src/ui/: dropdown.c  dropdown.h  ui.c  ui.h
tests/: CMakeLists.txt
tests/src/: test-patterns.c  tests.h
